--- a/templates/professor/myevals.html.twig
+++ b/templates/professor/myevals.html.twig
@@ -6,11 +6,24 @@
     <div class="container">
     <h1>Mes évals</h1>
 
-    <ul>
+    <table>
+        <thead>
+        <tr>
+            <th scope="col">Évaluation</th>
+            <th scope="col">Notes</th>
+            <th scope="col">Modification</th>
+        </tr>
+        </thead>
+        <tbody>
         {% for eval in evals %}
-            <li>{{ eval.label }} <a href="{{ path('app_evaluation_set_grades', {id: eval.id}) }}"><button class="btn btn-secondary">Notes</button></a></li>
+        <tr>
+            <td>{{ eval.label }}</td>
+            <td><a href="{{ path('app_evaluation_set_grades', {id: eval.id}) }}"><button class="btn btn-secondary">Notes</button></a></td>
+            <td><a href="{{ path('app_evaluation_edit', {id: eval.id}) }}"><button class="btn btn-warning">Modifier</button></a></td>
+        </tr>
         {% endfor %}
-    </ul>
+        </tbody>
+    </table>
     <a href="{{ path('app_evaluation_new') }}">Créer une nouvelle évaluation</a>
     </div>
 {% endblock %}
